--- a/views/newemp.ejs
+++ b/views/newemp.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Form</title>
+    <style>
+        button{
+      color:burlywood;
+    }
+    </style>
 </head>
 <body>
     <h1>Employee Information Form</h1>
