New feature to edit Existing Employee details

--- a/views/employeeData.ejs
+++ b/views/employeeData.ejs
@@ -12,6 +12,7 @@
   <% } else { %>
     <% employeeData.forEach((employee) => { %>
       <h2><%= employee.name %> (ID: <%= employee.id %>)</h2>
+      <h3>Salary : <%= employee.salary %></h3>
       <table border="1">
         <thead>
           <tr>
