Remove employee feature added

--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -120,7 +120,7 @@ a:hover {
     </tbody>
 </table>
 <a href="/findemp">Get Employee Data</a>
-<a href="/newjoin">New Employee</a><br>
+<a href="/newjoin">Edit Employee Details</a><br>
 <script >
     
 let currentDate = new Date();
