--- a/views/newemp.ejs
+++ b/views/newemp.ejs
@@ -30,19 +30,22 @@
         <% employees.forEach((employee) => { %>
             <label for="employeeName<%= employee.id %>">Name:</label>
             <input type="text" id="employeeName<%= employee.id %>" name="name" value="<%= employee.name %>" required>
-
+            <label for="employeeDelete<%= employee.id %>">Remove:</label>
+            <input type="checkbox" id="employeeDelete<%= employee.id %>" name="delete" value="<%= employee.id %>">
+            
             <br>
             <label for="employeeSalary<%= employee.id %>">Salary:</label>
             <input type="text" id="employeeSalary<%= employee.id %>" name="salary" value="<%= employee.salary %>" required>
-
+    
             <br>
             <!-- Display ID for existing employees -->
             <label for="employeeId<%= employee.id %>">ID:</label>
             <input type="text" id="employeeId<%= employee.id %>" name="id" value="<%= employee.id %>" readonly>
-
+            
+    
             <hr>
         <% }); %>
-
+    
         <button type="submit">Update Existing Employees</button>
     </form>
     <hr>
