--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -4,88 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
-    <style>
-        body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f5f5f5;
-}
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 
-h1 {
-  text-align: center;
-  color: #333;
-}
-
-div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 20px 0;
-}
-
-button {
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  padding: 10px 15px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #45a049;
-}
-
-input {
-  padding: 10px;
-  font-size: 16px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th, td {
-  border: 1px solid #ddd;
-  padding: 15px;
-  text-align: center;
-}
-
-th {
-  background-color: #4caf50;
-  color: white;
-}
-
-td {
-  background-color: #fff;
-}
-
-a {
-  display: block;
-  margin-top: 20px;
-  text-align: center;
-  text-decoration: none;
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 15px;
-  font-size: 16px;
-}
-
-a:hover {
-  background-color: #45a049;
-}
-
-.calendar-date.today {
-    background-color: #dd201c; /* Light red color, adjust as needed */
-}
-
-
-    </style>
 </head>
 <body>
 
