--- a/views/employeeData.ejs
+++ b/views/employeeData.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Employee Data</title>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
   <h1>Employee Data</h1>
