--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Employee Records</title>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
   <style>
     table {
       border-collapse: collapse;
