--- a/views/newemp.ejs
+++ b/views/newemp.ejs
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Form</title>
-    <style>
-        a {
-            display: block;
-            margin-top: 20px;
-            text-align: center;
-            text-decoration: none;
-            background-color: #4caf50;
-            color: white;
-            padding: 10px 15px;
-            font-size: 16px;
-        }
-
-        a:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+    
 </head>
 <body>
     <h1>Employee Information</h1>
