--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5;
+  background-color: rgb(59, 100, 116);
 }
 
 h1 {
@@ -37,6 +37,8 @@ button:hover {
 input {
   padding: 10px;
   font-size: 16px;
+  width: 100px;
+  background-color: rgb(194, 128, 255);
 }
 
 table {
@@ -56,7 +58,8 @@ th {
 }
 
 td {
-  background-color: #fff;
+  background-color: #4d4d4d;
+  color: rgb(255, 162, 0);
 }
 
 a {
@@ -76,4 +79,44 @@ a:hover {
 
 .calendar-date.today {
     background-color: #dd201c; /* Light red color, adjust as needed */
+}
+
+.start-date{
+  width: 200px;
+}
+.end-date{
+  width: 200px;
+}
+label {
+  font-weight: bold;
+}
+.empname{
+  color:rgb(255, 166, 0);
+  font-size: 30px;
+}
+
+
+/* Updated CSS for the checkbox */
+.checkbox-container {
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.checkbox-container input[type="checkbox"]:checked {
+  content: '✔'; /* Display a checkmark when checked */
+}
+
+
+.checkbox-container input[type="checkbox"]:checked + span {
+  color: #ff0000; /* Change text color when checked */
+}
+.checkbox-container:hover {
+  background-color: #a07145;
+}
+
+.update-button{
+  float:none;
+  width :100%;
+  position: fixed;
+  bottom: 0;
 }
