--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -42,6 +42,12 @@
           </td>
         </tr>
       <% } %>
+      <tr class="last-row">
+        <th>ID</th>
+        <th>Name</th>
+        <th>Attendance</th>
+        <th>Amount</th>
+      </tr>
     </table>
     <input type="hidden" name="date" value="<%=employees[0].date%>" />
     <button class="update-button" type="submit">Update</button>
