--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -10,6 +10,7 @@
 <body>
 
 <h1>Calendar</h1>
+<a href="/newjoin">Edit Employee Details</a>
 <div>
     <button onclick="goToSpecificMonthYear()">Go to Month/Year</button>
     <input type="text" id="inputMonth" placeholder="Enter Month (1-12)">
@@ -40,7 +41,7 @@
     </tbody>
 </table>
 <a href="/findemp">Get Employee Data</a>
-<a href="/newjoin">Edit Employee Details</a><br>
+
 <script >
     
 let currentDate = new Date();
