--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.8">
+  <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
   <title>Employee Records</title>
   <link rel="stylesheet" type="text/css" href="/styles.css">
   <style>
