--- a/views/calender.ejs
+++ b/views/calender.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.85, user-scalable=no">
-    <title>Calendar</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="/styles.css">
 
 </head>
